Implement environment-based build system for offline and production builds - Add config/_default, config/production, config/offline directories - Production build uses /wrpv2/ baseURL for subdirectory deployment - Offline build uses relative URLs for portable/downloadable package - Update package.json scripts: build:production, build:offline, deploy, package - Update README with new build workflow and deployment instructions

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "hugo server",
-    "build": "hugo --minify",
+    "dev": "hugo server",
+    "build:production": "hugo --environment production --minify",
+    "build:offline": "hugo --environment offline --minify",
     "clean": "node scripts/clean.js",
-    "package": "node scripts/package.js",
-    "dev": "npm run clean && npm run build && npm run package && hugo server"
+    "package": "npm run build:offline && node scripts/package.js",
+    "deploy": "npm run build:production"
   }
 }
