Updated architecture from Hugo pipe (unnecssarily complicated for this site) to static.  Learnt about the difference :-) - factored all the code for new architeture.  Edited and amalgamated sections for simplicity.  Reorganised site tree for simplicity, avoiding sub menus.  Rebuilt nav and added burger menu based on code from https://codepen.io/alvarotrigo/pen/oNGzoYd and reuilt hero section to be full screen on landing with nav bar sliding in on scroll.  Changed the colour palette from purple to autumnal.

--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,18 @@
+# Base URL - override at build time for subdirectory deployments
+# Examples:
+#   hugo --baseURL /                    (root deployment or offline)
+#   hugo --baseURL /wirpv2/             (subdirectory deployment)
+#   hugo --baseURL /courses/politics/   (any subdirectory)
 baseURL = "/"
+
 languageCode = "en-us"
-title = "radical // education"
+title = "Radical // Education"
 
 # Disable taxonomies, sitemap, and RSS generation
 disableKinds = ["taxonomy", "term", "sitemap", "RSS"]
 
-# Enable relative URLs for offline/portable use
+# Enable relative URLs for maximum portability
+# This allows the site to work in any subdirectory or offline
 relativeURLs = true
 canonifyURLs = false
 
